# agenthooks

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: architecture.md  flow.md  index.html  security.md
docs/superpowers/plans/: 2026-06-12-agenthooks-v1.md  2026-06-17-agentmesh.md
docs/superpowers/specs/: 2026-06-12-agenthooks-design.md  2026-06-17-agentmesh-design.md
examples/: 01_basic_hooks.py  02_customer_extensibility.py  03_multi_tenant_isolation.py  04_resilience.py  05_opentelemetry.py
scripts/: bump-version.sh  install-hooks.sh  pre-push.hook  regression.sh  release.sh
src/agenthooks/: __init__.py  audit.py  observability.py  patterns.py
src/agenthooks/agent/: __init__.py  base.py  wrapper.py
src/agenthooks/core/: __init__.py  context.py  contract.py  exceptions.py  hookpoint.py  registry.py
src/agenthooks/executor/: __init__.py  _base.py  parallel.py  sequential.py
src/agenthooks/security/: __init__.py  guards.py
src/agenthooks/store/: __init__.py  memory.py
tests/: conftest.py  test_agent.py  test_context.py  test_contract.py  test_exceptions.py  test_executor.py  test_hookpoint.py  test_observability.py  test_patterns.py  test_registry.py  test_security.py  test_store.py
