[project]
name = "agenthooks-py"
version = "0.1.0"
description = "Hook any production agent. Ship extensibility without a fork."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Naveen Kumar Baskaran" }]
keywords = ["agents", "hooks", "middleware", "extensibility", "opentelemetry", "llm", "enterprise"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
otel = ["opentelemetry-api>=1.20"]
sqlite = ["aiosqlite>=0.20"]
langchain = ["langchain-core>=0.3"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.0",
    "pydantic>=2.0",
]
all = ["agenthooks[pydantic,otel,sqlite,langchain,anthropic,openai]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenthooks"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
