[project]
name = "agenthooks-py"
version = "0.1.0"
description = "Hook any production agent. Ship extensibility without a fork."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Naveen Kumar Baskaran" }]
keywords = ["agents", "hooks", "middleware", "extensibility", "opentelemetry", "llm", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage   = "https://naveenkumarbaskaran.github.io/agenthooks/"
Repository = "https://github.com/naveenkumarbaskaran/agenthooks"
Issues     = "https://github.com/naveenkumarbaskaran/agenthooks/issues"

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
otel = ["opentelemetry-api>=1.20"]
sqlite = ["aiosqlite>=0.20"]
langchain = ["langchain-core>=0.3"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "anyio[trio]>=4.0",
    "pydantic>=2.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
all = ["agenthooks-py[pydantic,otel,sqlite,langchain,anthropic,openai]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenthooks"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = true
